# ScoutAI

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
docs/: ux_flow.md
scoutai/: __init__.py  cli.py  config.py
scoutai/agent/: __init__.py  harness.py
scoutai/audit/: __init__.py  log.py  metrics.py
scoutai/capabilities/: __init__.py  evidence.py  fairness.py  interview.py  model_router.py  prompts.py  role_requirements.py  scheduling.py  screen_resume.py
scoutai/graph/: __init__.py  app.py  export.py  nodes.py
scoutai/runtime/: __init__.py  session.py
scoutai/schemas/: __init__.py  types.py
tests/: __init__.py  test_export.py  test_runtime_session.py  test_s0_scaffold.py  test_s10_scheduling.py  test_s11_human_review.py  test_s12_audit.py  test_s13_metrics.py  test_s15_e2e.py  test_s16_evaluation.py  test_s1_schemas.py  test_s2_model_router.py  test_s3_screen_resume.py  test_s4_role_requirements.py  test_s5_evidence.py  test_s6_interview.py  test_s7_candidate_agent.py  test_s8_outer_graph.py  test_s9_fairness.py
tests/fixtures/: __init__.py  resumes.py
ui/: __init__.py  app.py  components.py  mock_data.py  styles.py
ui/screens/: __init__.py  candidate_comparison.py  candidate_list.py  candidate_review.py  continue_reviewing.py  hiring_run_complete.py  hiring_run_summary.py  landing.py  processing.py
