[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scoutai"
version = "0.1.0"
description = "Evidence-driven AI hiring intelligence system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ScoutAI Team" }]

dependencies = [
    # LangGraph / LangChain — core orchestration
    "langgraph==0.2.55",
    "langchain-core==0.3.29",
    "langchain-google-genai==2.0.8",
    "langchain-groq==0.2.3",

    # Data validation
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",

    # Configuration
    "pyyaml==6.0.2",
    "python-dotenv==1.0.1",

    # CLI
    "typer==0.15.1",
    "rich==13.9.4",

    # Utilities
    "tenacity==9.0.0",
    "httpx==0.28.1",
    "python-dateutil==2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.8.6",
    "mypy==1.14.0",
    "types-PyYAML==6.0.12.20241230",
    "types-python-dateutil==2.9.0.20241206",
]

[project.scripts]
hiring-run = "scoutai.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["scoutai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["B008", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scoutai"]
omit = ["tests/*"]

[theme]
font="Open Sans"
